--- a/Resume.tex
+++ b/Resume.tex
@@ -113,7 +113,7 @@
 
 \begin{center}
     \textbf{\Huge \scshape Sebastian Newberry} \\ \vspace{1pt}
-    \small 248-444-7804 $|$ \href{mailto:hk9952@wayne.edu}{\underline{hk9952@wayne.edu}} $|$ 
+    \small 248-444-7804 $|$ \href{mailto:snewbe@wayne.edu}{\underline{snewbe@wayne.edu}} $|$ 
     \href{https://linkedin.com/in/sebastian-newberry-288058191/}{\underline{linkedin.com/in/sebastian-newberry/}} $|$
     \href{https://github.com/SebastianNewberry}{\underline{github.com/SebastianNewberry}}
 \end{center}
@@ -137,9 +137,8 @@
       {Tutor, \href{https://rocket-group-project-2024.vercel.app/}{\color{Blue}View Trivia Game Project}, \href{https://eventplanner-alpha.vercel.app/ }{\color{Blue}View Event Planner Project}}{Detroit, MI}
       \resumeItemListStart
         \resumeItem{Led a team of 5 students in a technology tutoring program funded by Rocket Companies.}
-        \resumeItem{Taught students some important aspects of cybersecurity when creating websites, including signing auth cookies, making secure passwords, hashing passwords before putting them in a database, and much more.}
-        \resumeItem{Created a game using websockets to demonstrate the difference between how websocket servers and traditional http
- servers work.}
+        \resumeItem{Taught students core cybersecurity principles such as authentication token security, password hashing, and secure user input handling during web development.}
+        \resumeItem{Built an interactive WebSocket-based game to demonstrate real-time communication differences between WebSockets and traditional HTTP.}
         \resumeItem{Created and hosted a backend server on a DigitalOcean Virtual Private Server using Docker.}
         
       \resumeItemListEnd
@@ -156,7 +155,7 @@
 
     \resumeSubheading
       {Wayne State Cyber Defense Club}{Sep. 2022 -- Present}
-      {Windows Active Directory, \href{https://github.com/SebastianNewberry/WSUCTF2024}{\color{Blue}View Wayne State CTF challenges} }{Detroit, MI}
+      {Windows Active Directory, View Wayne State CTF \href{https://github.com/SebastianNewberry/WSUCTF2024}{\color{Blue}2024} and \href{https://github.com/SebastianNewberry/WSUCTF2025}{\color{Blue} 2025} challenges}{Detroit, MI}
       \resumeItemListStart
         \resumeItem{Hardened Windows Server 2012 in the Collegiate Cyber Defense Competition.}
         \resumeItem{Identified and exploited common web vulnerabilities, including SQLi, LFI, XSS, SSRF, and CSRF, on platforms
@@ -165,12 +164,9 @@
         mitigate real-world vulnerabilities.}
         \resumeItem{Gained hands-on experience with Bash scripting, Linux command-line tools, and Windows PowerShell in working
         through challenges on the Hackthebox website.}
-        \resumeItem{Developed and designed web exploitation challenges for the Wayne State University CTF competition.}
-        \resumeItem{One challenge involved using SQL injection to leak a flag from the session table in the database.}
-        \resumeItem{One challenge expanded on the first by using a known session key and using knowledge of the express-session library to
-        sign a cookie using HMAC, making the attacker an admin user.}
-        \resumeItem{The last challenge was a scripting challenge for users script a solution to a problem using the “pwn” library in python.}
-        \resumeItem{Used Docker to Host the three challenges on CTFtime.}
+        \resumeItem{Developed and designed web exploitation, pwn, and forensics challenges for the Wayne State University CTF competition.}
+        \resumeItem{Utilized tools like Wireshark for capturing network traffic, Ghidra for decompiling binaries, Burpsuite for web reconnaissance and exploitation}
+        \resumeItem{Deployed CTF challenges using Docker and CTFd to create isolated, reproducible environments.}
     \resumeItemListEnd
 
   \resumeSubHeadingListEnd
@@ -192,8 +188,14 @@
       \resumeProjectHeading
           {\href{https://devpost.com/software/privatedelivery/}{\color{Blue}\textbf{MHacks 15 - Private Delivery}} $|$ \emph{ReactJs, NextJs, MySQL, Prisma}}{Feb. 2023}
           \resumeItemListStart
-            \resumeItem{Created a full stack application that can connect people with delivery needs to drivers.}
+            \resumeItem{Developed a full-stack platform to match delivery requests with available drivers.}
             \resumeItem{Participated in an online Hackathon, and learned a lot through collaboration with others.}
+          \resumeItemListEnd
+      \resumeProjectHeading
+          {\href{https://github.com/SebastianNewberry/Final_Project_Intro_LLM/blob/main/Report.pdf}{\color{Blue}\textbf{Report on RAG (Retrieval Augmented Generation)}} $|$ \emph{Python, Pytorch, LaTex}}{Apr. 2025}
+          \resumeItemListStart
+            \resumeItem{Authored a comprehensive report on Retrieval-Augmented Generation (RAG), demonstrating how LLMs retrieve external documents to answer queries.}
+            \resumeItem{Demonstrated how RAG works using the RAGatouille python library. View the notebook \href{https://colab.research.google.com/github/SebastianNewberry/Final_Project_Intro_LLM/blob/main/langchain_ollama_rag.ipynb}{\color{Blue}\textbf{here}}.}
           \resumeItemListEnd
     \resumeSubHeadingListEnd
 
@@ -204,10 +206,10 @@
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{Languages}{: JavaScript, TypeScript, Python, R, Java, C++, SQL (Postgres, MySQL), MongoDB, HTML/CSS} \\
-     \textbf{Frameworks}{: React, Node.js} \\
-     \textbf{Developer Tools}{: Git, Docker, AWS S3, AWS Lambda, AWS Amplify} \\
-     \textbf{Libraries}{: pandas, NumPy, Matplotlib}
+     \textbf{Languages}{: JavaScript, TypeScript, Python, R, Java, C++, SQL (PostgreSQL, MySQL), MongoDB, HTML/CSS} \\
+     \textbf{Frameworks \& Libraries}{: React, Node.js, Pandas, NumPy, Matplotlib, PyTorch} \\
+     \textbf{Developer Tools}{: Git, Docker, VS Code} \\
+     \textbf{Cloud Platforms}{: AWS (S3, Lambda, Amplify)}
     }}
  \end{itemize}
 
