fixed grammar errors

--- a/Resume.tex
+++ b/Resume.tex
@@ -139,7 +139,7 @@
         \resumeItem{Led a team of 5 students in a technology tutoring program funded by Rocket Companies.}
         \resumeItem{Taught students core cybersecurity principles such as authentication token security, password hashing, and secure user input handling during web development.}
         \resumeItem{Built an interactive WebSocket-based game to demonstrate real-time communication differences between WebSockets and traditional HTTP.}
-        \resumeItem{Created and hosted a backend server on a DigitalOcean Virtual Private Server using Docker.}
+        \resumeItem{Deployed a backend server on a DigitalOcean VPS using Docker for containerization.}
         
       \resumeItemListEnd
       
@@ -157,7 +157,7 @@
       {Wayne State Cyber Defense Club}{Sep. 2022 -- Present}
       {Windows Active Directory, View Wayne State CTF \href{https://github.com/SebastianNewberry/WSUCTF2024}{\color{Blue}2024} and \href{https://github.com/SebastianNewberry/WSUCTF2025}{\color{Blue} 2025} challenges}{Detroit, MI}
       \resumeItemListStart
-        \resumeItem{Hardened Windows Server 2012 in the Collegiate Cyber Defense Competition.}
+        \resumeItem{Hardened Windows Server 2012 in the Collegiate Cyber Defense Competition (CCDC) to defend against simulated cyberattacks.}
         \resumeItem{Identified and exploited common web vulnerabilities, including SQLi, LFI, XSS, SSRF, and CSRF, on platforms
         such as HackTheBox and TryHackMe, while gaining expertise in their prevention techniques.}
         \resumeItem{Regularly participated in HackTheBox challenges to strengthen my CTF skills and refine my ability to identify and
@@ -165,7 +165,7 @@
         \resumeItem{Gained hands-on experience with Bash scripting, Linux command-line tools, and Windows PowerShell in working
         through challenges on the Hackthebox website.}
         \resumeItem{Developed and designed web exploitation, pwn, and forensics challenges for the Wayne State University CTF competition.}
-        \resumeItem{Utilized tools like Wireshark for capturing network traffic, Ghidra for decompiling binaries, Burpsuite for web reconnaissance and exploitation}
+        \resumeItem{Utilized tools like Wireshark for capturing network traffic, Ghidra for decompiling binaries, Burp Suite for web reconnaissance and exploitation.}
         \resumeItem{Deployed CTF challenges using Docker and CTFd to create isolated, reproducible environments.}
     \resumeItemListEnd
 
@@ -178,10 +178,10 @@
       \resumeProjectHeading
           {\href{https://volunteer-opportunities.vercel.app/}{\color{Blue}\textbf{Volunteer Opportunities}} $|$ \emph{ReactJs, NextJs, AWS S3, Pusher Websockets, PostgreSQL}}{Sept. 2024 -- Dec. 2024}
           \resumeItemListStart
-            \resumeItem{Worked with a group of 5 people on creating a website to connect volunteers with organizations.}
+            \resumeItem{Collaborated with a team of 5 to build a platform connecting volunteers with organizations.}
             \resumeItem{Designed and implemented a messaging interface from scratch, enabling seamless real-time communication on the
- web platform using Pusher websockets.}
-            \resumeItem{Integrated mapbox with the project to render listings on maps with relevant information.}
+ web platform using Pusher Websockets.}
+            \resumeItem{Integrated Mapbox with the project to render listings on maps with relevant information.}
             \resumeItem{Configured Zustand to implement efficient pagination, enabling seamless data loading without the need for page
  refreshes.}
           \resumeItemListEnd
@@ -189,13 +189,13 @@
           {\href{https://devpost.com/software/privatedelivery/}{\color{Blue}\textbf{MHacks 15 - Private Delivery}} $|$ \emph{ReactJs, NextJs, MySQL, Prisma}}{Feb. 2023}
           \resumeItemListStart
             \resumeItem{Developed a full-stack platform to match delivery requests with available drivers.}
-            \resumeItem{Participated in an online Hackathon, and learned a lot through collaboration with others.}
+            \resumeItem{Gained hands-on experience through collaborative development in a 24-hour online hackathon.}
           \resumeItemListEnd
       \resumeProjectHeading
-          {\href{https://github.com/SebastianNewberry/Final_Project_Intro_LLM/blob/main/Report.pdf}{\color{Blue}\textbf{Report on RAG (Retrieval Augmented Generation)}} $|$ \emph{Python, Pytorch, LaTex}}{Apr. 2025}
+          {\href{https://github.com/SebastianNewberry/Final_Project_Intro_LLM/blob/main/Report.pdf}{\color{Blue}\textbf{Report on RAG (Retrieval Augmented Generation)}} $|$ \emph{Python, PyTorch, LaTex}}{Apr. 2025}
           \resumeItemListStart
             \resumeItem{Authored a comprehensive report on Retrieval-Augmented Generation (RAG), demonstrating how LLMs retrieve external documents to answer queries.}
-            \resumeItem{Demonstrated how RAG works using the RAGatouille python library. View the notebook \href{https://colab.research.google.com/github/SebastianNewberry/Final_Project_Intro_LLM/blob/main/langchain_ollama_rag.ipynb}{\color{Blue}\textbf{here}}.}
+            \resumeItem{Implemented a practical demo of RAG using the RAGatouille Python library. View the notebook \href{https://colab.research.google.com/github/SebastianNewberry/Final_Project_Intro_LLM/blob/main/langchain_ollama_rag.ipynb}{\color{Blue}\textbf{here}}.}
           \resumeItemListEnd
     \resumeSubHeadingListEnd
 
@@ -206,10 +206,10 @@
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{Languages}{: JavaScript, TypeScript, Python, R, Java, C++, SQL (PostgreSQL, MySQL), MongoDB, HTML/CSS} \\
-     \textbf{Frameworks \& Libraries}{: React, Node.js, Pandas, NumPy, Matplotlib, PyTorch} \\
-     \textbf{Developer Tools}{: Git, Docker, VS Code} \\
-     \textbf{Cloud Platforms}{: AWS (S3, Lambda, Amplify)}
+     \textbf{Languages}{: C++, HTML/CSS, Java, JavaScript, MongoDB, Python, R, SQL (PostgreSQL, MySQL), TypeScript} \\
+     \textbf{Frameworks \& Libraries}{: Matplotlib, Node.js, NumPy, Pandas, PyTorch, React} \\
+     \textbf{Developer Tools}{: Docker, Git} \\
+     \textbf{Cloud Platforms}{: AWS (Amplify, Lambda, S3)}
     }}
  \end{itemize}
 
