fixed order of languages on resume

--- a/Resume.tex
+++ b/Resume.tex
@@ -206,7 +206,7 @@
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{Languages}{: C++, HTML/CSS, Java, JavaScript, MongoDB, Python, R, SQL (PostgreSQL, MySQL), TypeScript} \\
+     \textbf{Languages}{: Python, JavaScript, TypeScript, C++, Java, R, MongoDB, SQL (PostgreSQL, MySQL), HTML/CSS} \\
      \textbf{Frameworks \& Libraries}{: Matplotlib, Node.js, NumPy, Pandas, PyTorch, React} \\
      \textbf{Developer Tools}{: Docker, Git} \\
      \textbf{Cloud Platforms}{: AWS (Amplify, Lambda, S3)}
