--- a/Resume.tex
+++ b/Resume.tex
@@ -192,7 +192,7 @@
             \resumeItem{Gained hands-on experience through collaborative development in a 24-hour online hackathon.}
           \resumeItemListEnd
       \resumeProjectHeading
-          {\href{https://github.com/SebastianNewberry/Final_Project_Intro_LLM/blob/main/Report.pdf}{\color{Blue}\textbf{Report on RAG (Retrieval Augmented Generation)}} $|$ \emph{Python, PyTorch, LaTex}}{Apr. 2025}
+          {\href{https://github.com/SebastianNewberry/Final_Project_Intro_LLM/blob/main/Report.pdf}{\color{Blue}\textbf{Report on RAG (Retrieval Augmented Generation)}} $|$ \emph{Python, PyTorch, LaTex}}{Feb. 2025 - Apr. 2025}
           \resumeItemListStart
             \resumeItem{Authored a comprehensive report on Retrieval-Augmented Generation (RAG), demonstrating how LLMs retrieve external documents to answer queries.}
             \resumeItem{Implemented a practical demo of RAG using the RAGatouille Python library. View the notebook \href{https://colab.research.google.com/github/SebastianNewberry/Final_Project_Intro_LLM/blob/main/langchain_ollama_rag.ipynb}{\color{Blue}\textbf{here}}.}
