--- a/Resume_Sebastian_Newberry.tex
+++ b/Resume_Sebastian_Newberry.tex
@@ -133,7 +133,7 @@
   \resumeSubHeadingListStart
 
     \resumeSubheading
-      {Detroit Public Schools X Rocket Companies}{July 2024 -- Aug. 2024, July 2023 -- Aug. 2023}
+      {Detroit Public Schools X Rocket Companies}{July -- Aug. 2023, 2024, 2025}
       {Tutor, \href{https://rocket-group-project-2024.vercel.app/}{\color{Blue}View Trivia Game Project}, \href{https://eventplanner-alpha.vercel.app/ }{\color{Blue}View Event Planner Project}}{Detroit, MI}
       \resumeItemListStart
         \resumeItem{Led a team of 5 students in a technology tutoring program funded by Rocket Companies.}
