made small grammar change to resume

--- a/Resume_Sebastian_Newberry_Masters.tex
+++ b/Resume_Sebastian_Newberry_Masters.tex
@@ -163,7 +163,7 @@
       {Windows Active Directory, View Wayne State CTF \href{https://github.com/SebastianNewberry/WSUCTF2024}{\color{Blue}2024} and \href{https://github.com/SebastianNewberry/WSUCTF2025}{\color{Blue} 2025} challenges}{Detroit, MI}
       \resumeItemListStart
         \resumeItem{Hardened Windows Server 2012 in the Collegiate Cyber Defense Competition (CCDC) to defend against simulated cyberattacks.}
-        \resumeItem{Identified and exploited common web vulnerabilities, including SQLi, LFI, XSS, SSRF, and CSRF, on platforms
+        \resumeItem{Identified and exploited common web vulnerabilities, including SQLi, LFI, XSS, SSRF, and CSRF on platforms
         such as HackTheBox and TryHackMe, while gaining expertise in their prevention techniques.}
         \resumeItem{Regularly participated in HackTheBox challenges to strengthen my CTF skills and refine my ability to identify and
         mitigate real-world vulnerabilities.}
